# YimMenuV2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  pr-comment.yml
cmake/: async-logger.cmake  cross-compile.cmake  crosscompile.cmake  imgui.cmake  json.cmake  minhook.cmake
src/: common.hpp  main.cpp
src/core/backend/: FiberPool.cpp  FiberPool.hpp  PatternCache.cpp  PatternCache.hpp  ScriptMgr.cpp  ScriptMgr.hpp
src/core/commands/: BoolCommand.cpp  BoolCommand.hpp  ColorCommand.cpp  ColorCommand.hpp  Command.cpp  Command.hpp  Commands.cpp  Commands.hpp  FloatCommand.cpp  FloatCommand.hpp  HotkeySystem.cpp  HotkeySystem.hpp  IntCommand.cpp  IntCommand.hpp  ListCommand.cpp  ListCommand.hpp  LoopedCommand.cpp  Vector3Command.cpp  Vector3Command.hpp
src/core/filemgr/: CacheFile.cpp  CacheFile.hpp  File.cpp  File.hpp  FileMgr.cpp  FileMgr.hpp  Folder.cpp  Folder.hpp
src/core/frontend/: Notifications.cpp  Notifications.hpp
src/core/hooking/: BaseHook.hpp  CallHook.cpp  CallHook.hpp  DetourHook.hpp  Hooking.cpp  Hooking.hpp  IATHook.hpp  VMTHook.hpp
src/core/logger/: ExceptionHandler.cpp  ExceptionHandler.hpp  LogHelper.cpp  LogHelper.hpp  LogSink.cpp  StackTrace.cpp  StackTrace.hpp
src/core/memory/: BytePatch.cpp  BytePatch.hpp  BytePatches.cpp  BytePatches.hpp  Module.cpp  Module.hpp  ModuleMgr.cpp  ModuleMgr.hpp  Pattern.cpp  Pattern.hpp  PatternHash.hpp  PatternScanner.cpp
src/game/gta/: Ped.cpp  (+34 more)
(+506 files in other folders)
